--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ julia:
   - nightly
 notifications:
   email: false
-# uncomment the following lines to override the default test script
-#script:
-#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("Formulas"); Pkg.test("Formulas"; coverage=true)'
+script:
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - julia -e 'Pkg.clone(pwd()); Pkg.build("Formulas"); Pkg.test("Formulas"; coverage=true)'
+after_success:
+  - julia -e 'cd(Pkg.dir("Formulas")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder())'
